# catalog_scrapter

./: README.md  pyproject.toml
data/: category_summary.csv  products.csv  products.json  products_cleaned.csv
src/: main.py
src/scraper/: crawler.py  exporters.py  parsers.py  product_scraper.py  transform.py  utils.py
